@@ -18,6 +18,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Install Debian configuration in the binary package's examples
       directory (closes: #222118).
     - New standalone SpamAssassin queue runner, spamscan.
+    - Allow # prefix on bug numbers in 'merge' command.
 
   * Adam Heath:
     - Rewrite filtering in cgi's common.pl, to make it completely generic.
